Move to timeline style

--- a/public/app/templates/login.html
+++ b/public/app/templates/login.html
@@ -1,4 +1,4 @@
 <br />
  <a href="https://www.facebook.com/v2.8/dialog/oauth?client_id=1849991008616531&redirect_uri=https%3A%2F%2Fkycbit.azurewebsites.net%2F">Войти через Facebook</a><br />
- <a href="http://192.168.99.100:8081/authorize?client_id=333333&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2Foauth2&response_type=code&scope=all&state=xyz">Войти через банк XYZ</a></br>
- <a href="http://192.168.99.100:8082/authorize?client_id=222222&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2Foauth2&response_type=code&scope=all&state=xyz">Войти через Банк 1000 грёз</a>
+ <a href="https://localhost/oauth/account=0xaba43423454bc434&secret=dudsfasdf3434uisdfiu&redirect=https%3A%2F%2Fyandex.ru%2Fsearch%3Fq%3Dadf">Войти через РосЕвроБанк</a></br>
+ 
